# uvenv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  pyproject.toml  rustfmt.toml
docs/: ubuntu_2404.md
src/: animate.rs  cli.rs  cmd.rs  helpers.rs  lib.rs  main.rs  metadata.rs  pip.rs  promises.rs  pypi.rs  symlinks.rs  uv.rs  venv.rs
src/commands/: activate.rs  changelog.rs  check.rs  completions.rs  create.rs  ensurepath.rs  inject.rs  install.rs  list.rs  mod.rs  reinstall.rs  reinstall_all.rs  run.rs  runpip.rs  runpython.rs  runuv.rs  self_changelog.rs  self_link.rs  self_migrate.rs  self_update.rs  self_version.rs  setup.rs  uninject.rs  uninstall.rs  uninstall_all.rs  upgrade.rs  upgrade_all.rs
src/shell/: activate.sh
src/tests/: mod.rs  shared.rs  special_home_dir.rs  version.rs
uvx/: __init__.py
