[package]
name = "uvx"
description = "uvx: pipx for uv (🦀)"
version = "2.5.1"
edition = "2021"
categories = ["development-tools", "development-tools::build-utils", "virtualization", "external-ffi-bindings", "command-line-interface"]
keywords = ["Python", "uv", "pip", "packaging"]
repository = "https://github.com/robinvandernoord/uvx2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# async
tokio = { version = "1.38", features = ["default", "process", "rt-multi-thread"] }
futures = "0.3"

# serialize
rmp-serde = "1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
rkyv = "0.7.44" # archiving/serializing used by uv

# helpers
home = "0.5" # ~ resolving
directories = "5.0"
itertools = "0.13" # more .iter magic
configparser = "3.1"
tempfile = "3.10"
chrono = "0.4"
subprocess = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls", "rustls-tls-native-roots"] }
regex = "1.10"

# fancy
anstyle = "1.0" # color styling for clap
owo-colors = "4.0" # color styling for strings

# uv
# uv-requirements = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
uv-cache = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
uv-client = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
uv-installer = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
uv-python = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
# uv-resolver = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
pep440_rs = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
pep508_rs = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
# install-wheel-rs = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }
# distribution-types = { git = "https://github.com/astral-sh/uv.git", tag = "0.2.27" }

# security bumps/pins:
rustls = "0.23"

[patch.crates-io]
# black magic fuckery, required after 0.2.18, otherwise uv-client won't compile
reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "21ceec9a5fd2e8d6f71c3ea2999078fecbd13cbe" }



[lints.clippy]
# categories:
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# specific ones:
module_name_repetitions = "allow"
future_not_send = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
