[package]
name = "uvenv"
description = "uvenv: pipx for uv (🦀)"
version = "3.3.3"
edition = "2021"
categories = ["development-tools", "development-tools::build-utils", "virtualization", "external-ffi-bindings", "command-line-interface"]
keywords = ["Python", "uv", "pip", "packaging"]
repository = "https://github.com/robinvandernoord/uvenv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = { version = "1.0", features = ["default", "backtrace"] }

# async
tokio = { version = "1.40", features = ["default", "process", "rt-multi-thread"] }

# serialize
rmp-serde = "1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
rkyv = "0.7.45" # archiving/serializing used by uv

# helpers
home = "0.5" # ~ resolving
directories = "5.0"
itertools = "0.13" # more .iter magic
configparser = "3.1"
tempfile = "3.11"
chrono = "0.4"
subprocess = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls", "rustls-tls-native-roots"] }
regex = "1.10"
futures = "0.3"
scopeguard = "1.2" # for defer!

# fancy
anstyle = "1.0" # color styling for clap
owo-colors = "4.0" # color styling for strings

# uv
# uv-requirements = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
uv-cache = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
uv-client = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
uv-installer = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
uv-python = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
# uv-resolver = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
pep440_rs = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
pep508_rs = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
# install-wheel-rs = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }
 distribution-types = { git = "https://github.com/astral-sh/uv.git", tag = "0.4.4" }

# security bumps/pins:
rustls = "0.23"

[patch.crates-io]
# black magic fuckery, required after 0.2.18, otherwise uv-client won't compile
reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "5e3eaf254b5bd481c75d2710eed055f95b756913" }


[lints.clippy]
# categories:
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# specific ones:
## deny
unwrap_used = "deny"

## allow
module_name_repetitions = "allow"
future_not_send = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
