[build-system]
requires = [
    "maturin>=1.5,<2.0",
    # Add a fake dependency for unsupported platforms:
    "please-use-uvx-v1-on-this-platform; sys_platform != 'linux' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')",
]
build-backend = "maturin"

[project]
name = "uvenv"
# requires-python = ">=3.10"
description = 'uvenv: pipx for uv (🦀)'
readme = "README.md"
license = "MIT"
keywords = []
authors = [
    { name = "Robin van der Noord", email = "robinvandernoord@gmail.com" },
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX :: Linux",
    #    "Architecture :: x86_64",
    #    "Architecture :: aarch64",

    "Development Status :: 4 - Beta",
]

dynamic = ["version"]

dependencies = [
    "uv==0.4.20", # obviously
    "pip", # self-update
    "patchelf", # idk, but required
]

[project.optional-dependencies]
dev = [
    "maturin",
]

[tool.maturin]
bindings = "bin"
